- Adding personen controller - Improving the GUI
